--- a/main.html
+++ b/main.html
@@ -4,11 +4,33 @@
 
 <head>
 	<title>Audio Player</title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
+	<link rel="stylesheet" href="styles.css
 	<!-- the entire body must be written by student -->
+	<body>
+	<!-- the entire body must be written by student -->
+	<section id="buttons">
+		 <input  class="btn" id="bt-n" type="button" value="applause" onclick="play()">
+         <audio  id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="boo" onclick="play()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="gasp" onclick="play()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="tada" onclick="play()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="victory" onclick="play()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		<input class="btn" id="bt-n" type="button" value="wrong" onclick="play()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+		<input class="stop" id="bt-n" type="button" value="stop" onclick="stop()">
+         <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+
+	</section>
 	<div id="buttons">
 		<button class="btn" onclick="playSound('sound1.mp3')">Sound 1</button>
 		<button class="btn" onclick="playSound('sound2.mp3')">Sound 2</button>
